# scan-history

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: incremental_scan.py
scan_history/: __init__.py
tests/: test_scan_history.py
